Fix pre tag for overflow & font-size

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -149,7 +149,7 @@ code,
 pre {
   --ani-code-font-size: 1em;
   --ani-code-margin: auto;
-  --ani-code-overflow: scroll;
+  --ani-code-overflow: auto;
   --ani-code-padding: 10px;
   --ani-code-text-align: initial;
   --ani-code-white-space: pre-line;
